update : speed input size

--- a/src/scss/content/_clients.scss
+++ b/src/scss/content/_clients.scss
@@ -56,5 +56,9 @@
                 width: auto;
                 margin-left: 250px;
             }
+
+            .active span{
+                background: #6F77F1!important;
+            }
     }
 }
