--- a/src/scss/content/_speed.scss
+++ b/src/scss/content/_speed.scss
@@ -50,6 +50,10 @@
   @media (min-width: 992px) {
     max-width: 285px;
   }
+
+  @media (min-width: 1920px) {
+    width: 285px;
+  }
 }
 
 .speed-content-form {
